# serializer version: 1
# name: test_parse_album_snapshot[minimal]
  dict({
    'album_type': 'album',
    'artists': list([
    ]),
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '300',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Album',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '300',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/album/300',
      }),
    ]),
    'sort_name': 'test album',
    'translation_key': None,
    'uri': 'kion_music_instance://album/300',
    'version': '',
    'year': 2020,
  })
# ---
# name: test_parse_artist_snapshot[minimal]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '100',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Artist',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '100',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/artist/100',
      }),
    ]),
    'sort_name': 'test artist',
    'translation_key': None,
    'uri': 'kion_music_instance://artist/100',
    'version': '',
  })
# ---
# name: test_parse_artist_snapshot[with_cover]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '200',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://avatars.yandex.net/get-music-content/xxx/yyy/1000x1000',
          'provider': 'kion_music_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Artist With Cover',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '200',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/artist/200',
      }),
    ]),
    'sort_name': 'artist with cover',
    'translation_key': None,
    'uri': 'kion_music_instance://artist/200',
    'version': '',
  })
# ---
# name: test_parse_playlist_snapshot[minimal]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': True,
    'is_playable': True,
    'item_id': '12345:3',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'My Playlist',
    'owner': 'Me',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': True,
        'item_id': '12345:3',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/users/12345/playlists/3',
      }),
    ]),
    'sort_name': 'my playlist',
    'supported_mediatypes': list([
      'track',
    ]),
    'translation_key': None,
    'uri': 'kion_music_instance://playlist/12345:3',
    'version': '',
  })
# ---
# name: test_parse_playlist_snapshot[other_user]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': False,
    'is_playable': True,
    'item_id': '99999:1',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'A shared playlist',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Shared Playlist',
    'owner': 'Other User',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': False,
        'item_id': '99999:1',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/users/99999/playlists/1',
      }),
    ]),
    'sort_name': 'shared playlist',
    'supported_mediatypes': list([
      'track',
    ]),
    'translation_key': None,
    'uri': 'kion_music_instance://playlist/99999:1',
    'version': '',
  })
# ---
# name: test_parse_track_snapshot[minimal]
  dict({
    'album': None,
    'artists': list([
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 180,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '400',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': None,
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Track',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '400',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/track/400',
      }),
    ]),
    'sort_name': 'test track',
    'track_number': 0,
    'translation_key': None,
    'uri': 'kion_music_instance://track/400',
    'version': '',
  })
# ---
# name: test_parse_track_snapshot[with_artist_and_album]
  dict({
    'album': dict({
      'album_type': 'album',
      'artists': list([
      ]),
      'date_added': None,
      'external_ids': list([
      ]),
      'favorite': False,
      'is_playable': True,
      'item_id': '20',
      'media_type': 'album',
      'metadata': dict({
        'chapters': None,
        'copyright': None,
        'description': None,
        'explicit': None,
        'genres': None,
        'grouping': None,
        'images': list([
          dict({
            'path': 'https://avatars.yandex.net/get-music-content/aaa/bbb/1000x1000',
            'provider': 'kion_music_instance',
            'remotely_accessible': True,
            'type': 'thumb',
          }),
        ]),
        'label': None,
        'languages': None,
        'last_refresh': None,
        'links': None,
        'lrc_lyrics': None,
        'lyrics': None,
        'mood': None,
        'performers': None,
        'popularity': None,
        'preview': None,
        'release_date': None,
        'review': None,
        'style': None,
      }),
      'name': 'Track Album',
      'position': None,
      'provider': 'kion_music_instance',
      'provider_mappings': list([
        dict({
          'audio_format': dict({
            'bit_depth': 16,
            'bit_rate': 0,
            'channels': 2,
            'codec_type': '?',
            'content_type': '?',
            'output_format_str': '?',
            'sample_rate': 44100,
          }),
          'available': False,
          'details': None,
          'in_library': None,
          'is_unique': None,
          'item_id': '20',
          'provider_domain': 'kion_music',
          'provider_instance': 'kion_music_instance',
          'url': 'https://music.mts.ru/album/20',
        }),
      ]),
      'sort_name': 'track album',
      'translation_key': None,
      'uri': 'kion_music_instance://album/20',
      'version': '',
      'year': None,
    }),
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '10',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': None,
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'Track Artist',
        'position': None,
        'provider': 'kion_music_instance',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '10',
            'provider_domain': 'kion_music',
            'provider_instance': 'kion_music_instance',
            'url': 'https://music.mts.ru/artist/10',
          }),
        ]),
        'sort_name': 'track artist',
        'translation_key': None,
        'uri': 'kion_music_instance://artist/10',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 0,
    'duration': 240,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '500',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://avatars.yandex.net/get-music-content/aaa/bbb/1000x1000',
          'provider': 'kion_music_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Track With Album',
    'position': None,
    'provider': 'kion_music_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '500',
        'provider_domain': 'kion_music',
        'provider_instance': 'kion_music_instance',
        'url': 'https://music.mts.ru/track/500',
      }),
    ]),
    'sort_name': 'track with album',
    'track_number': 0,
    'translation_key': None,
    'uri': 'kion_music_instance://track/500',
    'version': '',
  })
# ---
